--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clappr/0.2.63/clappr.min.js"></script>
     <script src="javascripts/main.js"></script>
+    <script type="text/javascript" src="javascripts/clappr-google-ima-html5-preroll-plugin.min.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -43,11 +45,39 @@
 
 
 
-<h3>
-<a id="google-ima-preroll-ad-plugin-for-clappr-player" class="anchor" href="#google-ima-preroll-ad-plugin-for-clappr-player" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Google IMA preroll ad plugin for Clappr player</h3>
+<h3><a id="google-ima-preroll-ad-plugin-for-clappr-player" class="anchor" href="#google-ima-preroll-ad-plugin-for-clappr-player" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Google IMA preroll ad plugin for Clappr player</h3>
 
-<p></p><div id="player"></div>
-  
+<p></p>
+<div id="player"></div>
+  <div id="player"></div>
+  <script>
+    (function () {
+      // Clappr.Log.setLevel(0)
+      var videoUrl = 'http://www.streambox.fr/playlists/x36xhzz/x36xhzz.m3u8'
+
+      // Single Inline Linear. See https://developers.google.com/interactive-media-ads/docs/sdks/html5/tags
+      var vastTag = 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator='
+
+      var player = new Clappr.Player({
+        parentId: "#player",
+        source: videoUrl,
+        disableKeyboardShortcuts: true,
+        disableVideoTagContextMenu: true,
+        autoSeekFromUrl: false,
+        autoPlay: false,
+        // width: 640,
+        // height: 360,
+        plugins: {
+          core: [ClapprGoogleImaHtml5PrerollPlugin],
+        },
+        googleImaHtml5PrerollPlugin: {
+          tag: vastTag,
+          // autostart: false,
+        },
+      })
+    })()
+  </script>
+
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/kslimani">kslimani</a></p>
