--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
         <ul></ul>
       </nav>
       <section>
-        
-
-
-
-<h3><a id="google-ima-preroll-ad-plugin-for-clappr-player" class="anchor" href="#google-ima-preroll-ad-plugin-for-clappr-player" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Google IMA preroll ad plugin for Clappr player</h3>
+        <h3><a id="google-ima-preroll-ad-plugin-for-clappr-player" class="anchor" href="#google-ima-preroll-ad-plugin-for-clappr-player" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Google IMA preroll ad plugin for Clappr player</h3>
 
 <p></p>
 <div id="player"></div>
@@ -53,7 +49,7 @@
   <script>
     (function () {
       // Clappr.Log.setLevel(0)
-      var videoUrl = 'http://www.streambox.fr/playlists/x36xhzz/x36xhzz.m3u8'
+      var videoUrl = 'https://static.playmedia-cdn.net/resources/sample/h264_sintel_trailer-1080p.mp4'
 
       // Single Inline Linear. See https://developers.google.com/interactive-media-ads/docs/sdks/html5/tags
       var vastTag = 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator='
