Change player size.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 disableVideoTagContextMenu: true,
                 autoSeekFromUrl: false,
                 autoPlay: false,
+                width: "100%",
                 // width: 640,
                 // height: 360,
                 plugins: {
