refactor: rename demo folder to public

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script type="text/javascript" src="http://cdn.clappr.io/latest/clappr.js"></script> -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clappr/0.2.65/clappr.min.js"></script>
-  <script type="text/javascript" src="../dist/clappr-google-ima-html5-preroll-plugin.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clappr/0.2.66/clappr.min.js"></script>
+  <script type="text/javascript" src="clappr-google-ima-html5-preroll-plugin.js"></script>
 </head>
 <body>
   <div id="player"></div>
