--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clappr/0.2.65/clappr.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clappr/0.2.66/clappr.min.js"></script>
     <script src="javascripts/main.js"></script>
     <script type="text/javascript" src="javascripts/clappr-google-ima-html5-preroll-plugin.min.js"></script>
     <!--[if lt IE 9]>
@@ -51,6 +51,8 @@
           <script>
             (function () {
               // Clappr.Log.setLevel(0)
+
+              // Sintel trailer - (c) copyright Blender Foundation - www.sintel.org
               var videoUrl = 'https://static.playmedia-cdn.net/resources/sample/h264_sintel_trailer-1080p.mp4'
 
               // Single Inline Linear. See https://developers.google.com/interactive-media-ads/docs/sdks/html5/tags
@@ -80,6 +82,7 @@
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/kslimani">kslimani</a></p>
+        <p><small>Sintel trailer - (c) copyright Blender Foundation - <a href="https://www.sintel.org">www.sintel.org</a></small></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
