Enable inline playback (mobile devices)

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 width: "100%",
                 // width: 640,
                 // height: 360,
+                playback: {
+                  playInline: true,
+                },
                 plugins: {
                   core: [ClapprGoogleImaHtml5PrerollPlugin],
                 },
