Change demo page to be more mobile friendly

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <meta name="viewport" content="width=755, user-scalable=yes" />
+    <style>
+      #player {
+        width: 640px;
+        height: 360px;
+      }
+    </style>
   </head>
   <body>
 
@@ -66,8 +71,7 @@
                 autoSeekFromUrl: false,
                 autoPlay: false,
                 width: "100%",
-                // width: 640,
-                // height: 360,
+                height: "100%",
                 playback: {
                   playInline: true,
                 },
