chore: update dev. index page

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=655, user-scalable=yes" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clappr/0.2.66/clappr.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr@0.2.80/dist/clappr.min.js"></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
     <script type="text/javascript" src="clappr-google-ima-html5-preroll-plugin.js"></script>
     <style>
       .player {
@@ -27,6 +28,18 @@
         // Single Inline Linear. See https://developers.google.com/interactive-media-ads/docs/sdks/html5/tags
         var vastTag = 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator='
 
+        // Single Skippable Inline
+        // var vastTag = 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dskippablelinear&correlator='
+
+        // Single VPAID 2.0 Linear
+        // var vastTag = 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinearvpaid2js&correlator='
+
+        // Single VPAID 2.0 Non-Linear
+        // var vastTag = 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dnonlinearvpaid2js&correlator='
+
+        // Single Non-linear Inline
+        // var vastTag = 'https://pubads.g.doubleclick.net/gampad/ads?sz=480x70&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dnonlinear&correlator='
+
         var player = new Clappr.Player({
           parentId: ".player",
           source: videoUrl,
@@ -45,6 +58,8 @@
           googleImaHtml5PrerollPlugin: {
             tag: vastTag,
             // autostart: false,
+            vpaid: 1, // Default is 0 (DISABLED)
+            // nonLinearDuration: 10000, // Default is 5000 milliseconds
             imaLoadTimeout: 3000, // Default is 6000 milliseconds
             events: {
               content_resume_requested: function() { console.log('content_resume_requested') },
@@ -67,7 +82,19 @@
           },
         })
 
+        window.resizePlayer = function() {
+          var p = $('.player')[0];
+          p.style.width = '1280px';
+          p.style.height = '720px';
+        };
+        window.resetPlayer = function() {
+          var p = $('.player')[0];
+          p.style.width = '';
+          p.style.height = '';
+        };
       })()
     </script>
+    <button onclick="window.resizePlayer()">Resize player</button>
+    <button onclick="window.resetPlayer()">Reset player size</button>
   </body>
 </html>
