chore: adds 'content_resume' event to index test page

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
               user_close: function() { trackEvent('user_close') },
               ad_error: function(e) { trackEvent('ad_error: ' + e.getError()) },
               error: function(e) { trackEvent('error', e) },
+              content_resume: function() { trackEvent('content_resume') },
             }
           };
         };
