chore: add locale option in index page

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
             // nonLinearDuration: 20000, // Default is 15000 milliseconds
             imaLoadTimeout: 3000, // Default is 6000 milliseconds
             // maxDuration: 30000, // Default is false (DISABLED)
+            // locale: 'fr', // Default is false (Do not setup)
             events: {
               content_resume_requested: function() { trackEvent('content_resume_requested') },
               content_pause_requested: function() { trackEvent('content_pause_requested') },
