chore: add disableLoader option in index page

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
             imaLoadTimeout: 3000, // Default is 6000 milliseconds
             // maxDuration: 30000, // Default is false (DISABLED)
             // locale: 'fr', // Default is false (Do not setup)
+            // disableLoader: true, // Default is false (Loader is enabled)
             events: {
               content_resume_requested: function() { trackEvent('content_resume_requested') },
               content_pause_requested: function() { trackEvent('content_pause_requested') },
