feat: use jsDelivr plugin url

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/can-autoplay@3.0.0/build/can-autoplay.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr@0.2.95/dist/clappr.min.js"></script>
     <script src="javascripts/main.js"></script>
-    <script type="text/javascript" src="javascripts/clappr-google-ima-html5-preroll-plugin.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr-google-ima-html5-preroll-plugin@latest/dist/clappr-google-ima-html5-preroll-plugin.min.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
